azuredeploy.json
{
   "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
   "contentVersion": "1.0.0.0",
   "parameters": {
      "virtualMachineName": {
         "type": "String"
      }
   },
   "variables": {
      "dnsLabelPrefix": "[concat(toLower(parameters('virtualMachineName')), uniqueString(resourceGroup().id))]",
      "addressPrefix": "10.0.0.0/16",
      "subnetName": "Subnet",
      "subnetPrefix": "10.0.0.0/24",
      "networkInterfaceName": "[parameters('virtualMachineName')]",
      "publicIpAddressName": "[concat(parameters('virtualMachineName'), 'Pip')]",
      "storageAccountName": "[concat(toLower(parameters('virtualMachineName')), uniqueString(resourceGroup().id))]",
      "networkSecurityGroupName": "[concat(parameters('virtualMachineName'), 'nsg')]",
      "virtualNetworkName": "[concat(parameters('virtualMachineName'), 'Vnet')]",
      "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
      "subnetRef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('virtualNetworkName'), variables('subnetName'))]"
   },
   "resources": [{
         "type": "Microsoft.Compute/virtualMachines",
         "name": "[parameters('virtualMachineName')]",
         "apiVersion": "2017-03-30",
         "location": "[resourceGroup().location]",
         "properties": {
            "osProfile": {
               "computerName": "[parameters('virtualMachineName')]",
               "adminUsername": "vmadmin",
               "adminPassword": "P2ssw0rd@123",
               "windowsConfiguration": {
                  "provisionVmAgent": "true"
               }
            },
            "hardwareProfile": {
               "vmSize": "Standard_D2_v2"
            },
            "storageProfile": {
               "imageReference": {
                  "publisher": "MicrosoftSQLServer",
                  "offer": "SQL2017-WS2016",
                  "sku": "Express",
                  "version": "latest"
               },
               "osDisk": {
                  "createOption": "fromImage",
                  "name": "[parameters('virtualMachineName')]"
               },
               "dataDisks": [{
                  "createOption": "empty",
                  "lun": 0,
                  "diskSizeGB": "1023",
                  "caching": "ReadOnly",
                  "name": "[concat(parameters('virtualMachineName'), '-disk-1')]"
               }]
            },
            "networkProfile": {
               "networkInterfaces": [{
                  "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]"
               }]
            }
         },
         "dependsOn": [
            "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]",
            "[concat('Microsoft.Storage/storageAccounts/', variables('storageAccountName'))]"
         ]
      },
      {
         "type": "Microsoft.Compute/virtualMachines/extensions",
         "apiVersion": "2015-06-15",
         "name": "[concat(parameters('virtualMachineName'),'/CustomScriptExtension')]",
         "location": "[resourceGroup().location]",
         "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
         ],
         "properties": {
            "publisher": "Microsoft.Compute",
            "type": "CustomScriptExtension",
            "typeHandlerVersion": "1.9",
            "autoUpgradeMinorVersion": true,
            "settings": {
               "fileUris": [
                  "https://raw.githubusercontent.com/microsoft/azuredevopslabs/master/labs/vstsextend/selenium/armtemplate/chrome_firefox_VSTSagent_IIS.ps1"
               ],
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File ', 'chrome_firefox_VSTSagent_IIS.ps1')]"
                },
                "commandToExecute": "powershell.exe -ExecutionPolicy Unrestricted -File chrome_firefox_VSTSagent_IIS.ps1"
            }
         }
      },
      {
         "type": "Microsoft.Compute/virtualMachines/extensions",
         "name": "[concat(parameters('virtualMachineName'), '/SqlIaasExtension')]",
         "apiVersion": "2015-06-15",
         "location": "[resourceGroup().location]",
         "properties": {
            "type": "SqlIaaSAgent",
            "publisher": "Microsoft.SqlServer.Management",
            "typeHandlerVersion": "1.2",
            "autoUpgradeMinorVersion": "true",
            "settings": {
               "AutoTelemetrySettings": {
                  "Region": "[resourceGroup().location]"
               },
               "KeyVaultCredentialSettings": {
                  "Enable": false,
                  "CredentialName": ""
               }
            },
            "protectedSettings": {
               "SQLAuthUpdateUserName": "vmadmin",
               "SQLAuthUpdatePassword": "P2ssw0rd@123"
            }
         },
         "dependsOn": [
            "[concat('Microsoft.Compute/virtualMachines/', parameters('virtualMachineName'))]"
         ]
      },
      {
         "type": "Microsoft.Storage/storageAccounts",
         "name": "[variables('storageAccountName')]",
         "apiVersion": "2015-06-15",
         "location": "[resourceGroup().location]",
         "properties": {
            "accountType": "Standard_LRS"
         }
      },
      {
         "type": "Microsoft.Network/virtualNetworks",
         "name": "[variables('virtualNetworkName')]",
         "apiVersion": "2016-03-30",
         "location": "[resourceGroup().location]",
         "properties": {
            "addressSpace": {
               "addressPrefixes": [
                  "[variables('addressPrefix')]"
               ]
            },
            "subnets": [{
               "name": "[variables('subnetName')]",
               "properties": {
                  "addressPrefix": "[variables('subnetPrefix')]"
               }
            }]
         }
      },
      {
         "type": "Microsoft.Network/networkInterfaces",
         "name": "[variables('networkInterfaceName')]",
         "apiVersion": "2017-10-01",
         "location": "[resourceGroup().location]",
         "properties": {
            "ipConfigurations": [{
               "name": "ipconfig1",
               "properties": {
                  "privateIPAllocationMethod": "Dynamic",
                  "publicIPAddress": {
                     "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('publicIPAddressName'))]"
                  },
                  "subnet": {
                     "id": "[variables('subnetRef')]"
                  }
               }
            }]
         },
         "dependsOn": [
            "[resourceId('Microsoft.Network/publicIPAddresses/', variables('publicIPAddressName'))]",
            "[resourceId('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]"
         ]
      },
      {
         "type": "Microsoft.Network/publicIpAddresses",
         "name": "[variables('publicIpAddressName')]",
         "apiVersion": "2017-08-01",
         "location": "[resourceGroup().location]",
         "properties": {
            "publicIPAllocationMethod": "Dynamic",
            "dnsSettings": {
               "domainNameLabel": "[variables('dnsLabelPrefix')]"
            }
         }
      },
      {
         "type": "Microsoft.Network/networkSecurityGroups",
         "name": "[variables('networkSecurityGroupName')]",
         "apiVersion": "2017-10-01",
         "location": "[resourceGroup().location]",
         "properties": {
            "securityRules": [{
                  "name": "default-allow-rdp",
                  "properties": {
                     "priority": 1000,
                     "protocol": "TCP",
                     "access": "Allow",
                     "direction": "Inbound",
                     "sourceAddressPrefix": "*",
                     "sourcePortRange": "*",
                     "destinationAddressPrefix": "*",
                     "destinationPortRange": "3389"
                  }
               },
               {
                  "name": "Port_1433",
                  "properties": {
                     "protocol": "*",
                     "sourcePortRange": "*",
                     "destinationPortRange": "1433",
                     "sourceAddressPrefix": "*",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 100,
                     "direction": "Inbound",
                     "sourceAddressPrefixes": [],
                     "destinationAddressPrefixes": []
                  }
               },
               {
                  "name": "Port_82",
                  "properties": {
                     "protocol": "*",
                     "sourcePortRange": "*",
                     "destinationPortRange": "82",
                     "sourceAddressPrefix": "*",
                     "destinationAddressPrefix": "*",
                     "access": "Allow",
                     "priority": 101,
                     "direction": "Inbound",
                     "sourceAddressPrefixes": [],
                     "destinationAddressPrefixes": []
                  }
               }
            ]
         }
      }
   ],
   "outputs": {
      "adminUsername": {
         "type": "String",
         "value": "vmadmin"
      },
      "hostname": {
         "type": "String",
         "value": "[reference(variables('publicIPAddressName')).dnsSettings.fqdn]"
      }
   }
}
